# Polizia-RS

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  readme.md
src/: main.rs  models.rs  schema.rs
