[package]
name = "polizia_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.2", features = ["mysql", "chrono"] }
dotenvy = "0.15.6"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"]}
serde_json = "1.0.89"
chrono = { version = "0.4.23", features = ["serde"] }